API ChangeLog

27-Apr-2014	Troy A. Griffitts <scribe@crosswire.org>
	Added C# bindings contributed by Daniel Hughes <trampster@gmail.com>

* Release 1.7.0 *

5-Oct-2013	Troy A. Griffitts <scribe@crosswire.org>
	Add a new Option filter, OSISReferenceLinks, based on work submitted
		by "John Austin", which allows removal of references based on
		a type/subtype combination. .conf usage is:
		GlobalOptionFilter=OSISReferenceLinks|Option Name|Option Tip
			|OSIS Reference Type|OSIS Reference SubType
			|Default Value
		e.g,
		GlobalOptionFilter=OSISReferenceLinks|Reference Material Links
			|Hide or show links in the Biblical text to study helps
			|x-glossary||On

14-Aug-2013	Troy A. Griffitts <scribe@crosswire.org>
	Added new version macros in swversion.h and removed
		config.h as a packaged and included entity

2-Aug-2013	Chris Little <chrislit@crosswire.org>
	Added basic bibliography method to SWModule
		(mostly from refdoc's patch)

16-July-2013	Troy A. Griffitts <scribe@crosswire.org>
	Many classes have had class and method names normalized, including:
		VerseMgr renamed to VersificationMgr
		SWKey
		ListKey
		SWModule

13-July-2013	Chris Little <chrislit@crosswire.org>
	Added LXX & Orthodox versifications

13-July-2013	Troy A. Griffitts <scribe@crosswire.org>
	InstallMgr FTP now has a 45 second timeout

11-July-2013	Troy A. Griffitts <scribe@crosswire.org>
	SWIG bindings updated to build and work with autotools

8-Jul-2013	Chris Little <chrislit@crosswire.org>
	Applied submitted UTF8ArabicPoints code
	Plugged Bzip2Compress & XzCompress into the API, though these
		remain clones of the ZipCompress class and will not be
		supported in 1.7.0

6-July-2013	Jaak Ristioja <jaak@ristioja.ee>
	InstallMgr HTTP transport, fix for buffer overrun in non-standard
		Apache dir list output

29-Jun=2013	Chris Little <chrislit@crosswire.org>
	Removed PLAINHTML and PLAINFootnotes filters

19-Jun-2013	Gregory S. Hellings <greg.hellings@gmail.com>